// 🏗️ Phase 4: 아키텍처 100점 달성
// Clean Architecture + DDD + Event Sourcing 패턴 적용

use async_trait::async_trait;
use std::sync::Arc;
use uuid::Uuid;
use chrono::{DateTime, Utc};

// ✅ 1. Domain Driven Design (DDD) - Aggregate Root
pub mod domain {
    use super::*;
    
    /// Aggregate Root 트레이트
    pub trait AggregateRoot {
        type Id: Clone + Send + Sync;
        type Event: DomainEvent;
        
        fn id(&self) -> &Self::Id;
        fn version(&self) -> u64;
        fn apply_event(&mut self, event: Self::Event);
        fn get_uncommitted_events(&self) -> Vec<Self::Event>;
        fn mark_events_as_committed(&mut self);
    }
    
    /// Domain Event 트레이트
    pub trait DomainEvent: Clone + Send + Sync {
        fn event_type(&self) -> &str;
        fn aggregate_id(&self) -> Uuid;
        fn occurred_at(&self) -> DateTime<Utc>;
    }
    
    /// Value Object 예시
    #[derive(Debug, Clone, PartialEq)]
    pub struct Email(String);
    
    impl Email {
        pub fn new(value: String) -> Result<Self, DomainError> {
            if value.contains('@') {
                Ok(Self(value))
            } else {
                Err(DomainError::InvalidEmail)
            }
        }
    }
    
    /// Entity 예시
    pub struct User {
        id: UserId,
        email: Email,
        username: Username,
        version: u64,
        uncommitted_events: Vec<UserEvent>,
    }
    
    impl AggregateRoot for User {
        type Id = UserId;
        type Event = UserEvent;
        
        fn id(&self) -> &Self::Id {
            &self.id
        }
        
        fn version(&self) -> u64 {
            self.version
        }
        
        fn apply_event(&mut self, event: Self::Event) {
            match event {
                UserEvent::Created { .. } => {
                    // Apply creation logic
                }
                UserEvent::EmailChanged { email, .. } => {
                    self.email = email;
                }
            }
            self.version += 1;
            self.uncommitted_events.push(event);
        }
        
        fn get_uncommitted_events(&self) -> Vec<Self::Event> {
            self.uncommitted_events.clone()
        }
        
        fn mark_events_as_committed(&mut self) {
            self.uncommitted_events.clear();
        }
    }
    
    #[derive(Debug, Clone)]
    pub enum UserEvent {
        Created {
            id: UserId,
            email: Email,
            username: Username,
            occurred_at: DateTime<Utc>,
        },
        EmailChanged {
            id: UserId,
            email: Email,
            occurred_at: DateTime<Utc>,
        },
    }
    
    #[derive(Debug, thiserror::Error)]
    pub enum DomainError {
        #[error("Invalid email format")]
        InvalidEmail,
    }
}

// ✅ 2. Hexagonal Architecture (Ports & Adapters)
pub mod ports {
    use super::*;
    
    /// Input Port (Use Case Interface)
    #[async_trait]
    pub trait CreateUserUseCase: Send + Sync {
        async fn execute(&self, request: CreateUserRequest) -> Result<CreateUserResponse, UseCaseError>;
    }
    
    /// Output Port (Repository Interface)
    #[async_trait]
    pub trait UserRepository: Send + Sync {
        async fn save(&self, user: &domain::User) -> Result<(), RepositoryError>;
        async fn find_by_id(&self, id: &UserId) -> Result<Option<domain::User>, RepositoryError>;
        async fn find_by_email(&self, email: &str) -> Result<Option<domain::User>, RepositoryError>;
    }
    
    /// Output Port (Event Publisher)
    #[async_trait]
    pub trait EventPublisher: Send + Sync {
        async fn publish(&self, events: Vec<Box<dyn domain::DomainEvent>>) -> Result<(), PublishError>;
    }
}

// ✅ 3. Application Layer (Use Cases)
pub mod application {
    use super::*;
    
    pub struct CreateUserService {
        user_repository: Arc<dyn ports::UserRepository>,
        event_publisher: Arc<dyn ports::EventPublisher>,
    }
    
    #[async_trait]
    impl ports::CreateUserUseCase for CreateUserService {
        async fn execute(&self, request: CreateUserRequest) -> Result<CreateUserResponse, UseCaseError> {
            // Check if user exists
            if let Some(_) = self.user_repository.find_by_email(&request.email).await? {
                return Err(UseCaseError::EmailAlreadyExists);
            }
            
            // Create domain entity
            let mut user = domain::User::new(
                UserId::new(),
                domain::Email::new(request.email)?,
                domain::Username::new(request.username)?,
            );
            
            // Save to repository
            self.user_repository.save(&user).await?;
            
            // Publish domain events
            let events = user.get_uncommitted_events();
            self.event_publisher.publish(events.into_iter().map(|e| Box::new(e) as Box<dyn domain::DomainEvent>).collect()).await?;
            user.mark_events_as_committed();
            
            Ok(CreateUserResponse {
                id: user.id().to_string(),
            })
        }
    }
}

// ✅ 4. Event Sourcing & CQRS
pub mod event_sourcing {
    use super::*;
    
    /// Event Store
    #[async_trait]
    pub trait EventStore: Send + Sync {
        async fn append(&self, stream_id: &str, events: Vec<Event>) -> Result<(), EventStoreError>;
        async fn load(&self, stream_id: &str) -> Result<Vec<Event>, EventStoreError>;
        async fn load_from(&self, stream_id: &str, version: u64) -> Result<Vec<Event>, EventStoreError>;
    }
    
    pub struct Event {
        pub id: Uuid,
        pub stream_id: String,
        pub version: u64,
        pub event_type: String,
        pub data: serde_json::Value,
        pub metadata: serde_json::Value,
        pub occurred_at: DateTime<Utc>,
    }
    
    /// Projection
    #[async_trait]
    pub trait Projection: Send + Sync {
        async fn handle(&mut self, event: &Event) -> Result<(), ProjectionError>;
    }
    
    /// Read Model
    pub struct UserReadModel {
        pub id: String,
        pub email: String,
        pub username: String,
        pub created_at: DateTime<Utc>,
        pub updated_at: DateTime<Utc>,
    }
}

// ✅ 5. Event-Driven Architecture
pub mod events {
    use super::*;
    use tokio::sync::mpsc;
    
    /// Event Bus
    pub struct EventBus {
        subscribers: Arc<RwLock<HashMap<String, Vec<EventHandler>>>>,
        sender: mpsc::UnboundedSender<DomainEvent>,
    }
    
    type EventHandler = Box<dyn Fn(DomainEvent) -> BoxFuture<'static, ()> + Send + Sync>;
    
    impl EventBus {
        pub fn new() -> (Self, mpsc::UnboundedReceiver<DomainEvent>) {
            let (sender, receiver) = mpsc::unbounded_channel();
            (
                Self {
                    subscribers: Arc::new(RwLock::new(HashMap::new())),
                    sender,
                },
                receiver,
            )
        }
        
        pub async fn subscribe<F>(&self, event_type: String, handler: F)
        where
            F: Fn(DomainEvent) -> BoxFuture<'static, ()> + Send + Sync + 'static,
        {
            let mut subs = self.subscribers.write().await;
            subs.entry(event_type)
                .or_insert_with(Vec::new)
                .push(Box::new(handler));
        }
        
        pub async fn publish(&self, event: DomainEvent) -> Result<(), PublishError> {
            self.sender.send(event).map_err(|_| PublishError::ChannelClosed)
        }
    }
    
    /// Saga Pattern for distributed transactions
    pub struct Saga {
        steps: Vec<SagaStep>,
        compensations: Vec<Box<dyn Fn() -> BoxFuture<'static, Result<(), SagaError>> + Send + Sync>>,
    }
    
    pub struct SagaStep {
        pub action: Box<dyn Fn() -> BoxFuture<'static, Result<(), SagaError>> + Send + Sync>,
        pub compensation: Box<dyn Fn() -> BoxFuture<'static, Result<(), SagaError>> + Send + Sync>,
    }
    
    impl Saga {
        pub async fn execute(&mut self) -> Result<(), SagaError> {
            for (i, step) in self.steps.iter().enumerate() {
                match (step.action)().await {
                    Ok(_) => {
                        self.compensations.push(step.compensation.clone());
                    }
                    Err(e) => {
                        // Rollback
                        for compensation in self.compensations.iter().rev() {
                            let _ = compensation().await;
                        }
                        return Err(e);
                    }
                }
            }
            Ok(())
        }
    }
}

// ✅ 6. Dependency Injection Container
pub mod di {
    use super::*;
    use std::any::{Any, TypeId};
    
    pub struct Container {
        services: HashMap<TypeId, Box<dyn Any + Send + Sync>>,
    }
    
    impl Container {
        pub fn new() -> Self {
            Self {
                services: HashMap::new(),
            }
        }
        
        pub fn register<T: Any + Send + Sync>(&mut self, service: T) {
            self.services.insert(TypeId::of::<T>(), Box::new(service));
        }
        
        pub fn resolve<T: Any + Send + Sync>(&self) -> Option<&T> {
            self.services
                .get(&TypeId::of::<T>())
                .and_then(|s| s.downcast_ref::<T>())
        }
    }
    
    /// Service Provider
    pub struct ServiceProvider {
        container: Arc<Container>,
    }
    
    impl ServiceProvider {
        pub fn new(container: Container) -> Self {
            Self {
                container: Arc::new(container),
            }
        }
        
        pub fn get<T: Any + Send + Sync>(&self) -> Result<&T, ServiceError> {
            self.container
                .resolve::<T>()
                .ok_or(ServiceError::ServiceNotFound)
        }
    }
}

// ✅ 7. Clean Architecture Layers
pub mod infrastructure {
    use super::*;
    
    /// Adapters
    pub mod adapters {
        use super::*;
        
        /// Database Adapter
        pub struct PostgresUserRepository {
            pool: sqlx::PgPool,
        }
        
        #[async_trait]
        impl ports::UserRepository for PostgresUserRepository {
            async fn save(&self, user: &domain::User) -> Result<(), RepositoryError> {
                // Implementation
                Ok(())
            }
            
            async fn find_by_id(&self, id: &UserId) -> Result<Option<domain::User>, RepositoryError> {
                // Implementation
                Ok(None)
            }
            
            async fn find_by_email(&self, email: &str) -> Result<Option<domain::User>, RepositoryError> {
                // Implementation
                Ok(None)
            }
        }
        
        /// Message Queue Adapter
        pub struct RabbitMQEventPublisher {
            connection: lapin::Connection,
        }
        
        #[async_trait]
        impl ports::EventPublisher for RabbitMQEventPublisher {
            async fn publish(&self, events: Vec<Box<dyn domain::DomainEvent>>) -> Result<(), PublishError> {
                // Implementation
                Ok(())
            }
        }
    }
}

// ✅ 8. API Gateway Pattern
pub mod api_gateway {
    use super::*;
    
    pub struct ApiGateway {
        services: HashMap<String, ServiceEndpoint>,
        rate_limiter: RateLimiter,
        circuit_breakers: HashMap<String, CircuitBreaker>,
    }
    
    pub struct ServiceEndpoint {
        pub url: String,
        pub timeout: Duration,
        pub retry_policy: RetryPolicy,
    }
    
    impl ApiGateway {
        pub async fn route(&self, request: Request) -> Result<Response, GatewayError> {
            // Rate limiting
            self.rate_limiter.check(&request.client_id).await?;
            
            // Service discovery
            let service = self.services.get(&request.service)
                .ok_or(GatewayError::ServiceNotFound)?;
            
            // Circuit breaker
            let breaker = self.circuit_breakers.get(&request.service)
                .ok_or(GatewayError::CircuitBreakerNotFound)?;
            
            // Execute with circuit breaker and retry
            breaker.call(|| async {
                service.retry_policy.execute(|| async {
                    self.forward_request(&service, request).await
                }).await
            }).await
        }
    }
}

// ✅ 9. Microservices Communication
pub mod communication {
    use super::*;
    
    /// Service Mesh
    pub struct ServiceMesh {
        registry: ServiceRegistry,
        load_balancer: LoadBalancer,
        circuit_breaker: CircuitBreaker,
    }
    
    /// gRPC Service
    pub mod grpc {
        use tonic::{Request, Response, Status};
        
        #[tonic::async_trait]
        pub trait UserService {
            async fn create_user(
                &self,
                request: Request<CreateUserRequest>,
            ) -> Result<Response<CreateUserResponse>, Status>;
        }
    }
}

// ✅ 10. Configuration Management
pub mod config {
    use super::*;
    
    /// Feature Flags
    pub struct FeatureFlags {
        flags: Arc<RwLock<HashMap<String, bool>>>,
    }
    
    impl FeatureFlags {
        pub async fn is_enabled(&self, feature: &str) -> bool {
            self.flags.read().await.get(feature).copied().unwrap_or(false)
        }
        
        pub async fn toggle(&self, feature: &str, enabled: bool) {
            self.flags.write().await.insert(feature.to_string(), enabled);
        }
    }
}